<resources>
    <string name="app_name">PlastProd App</string>
    <string name="action_recherche">Rechercher</string>
    <string name="edit_message">Entrer un message</string>
    <string name="button_send">Valider</string>
    <string name="nom_utilisateur">Nom d\'utilisateur</string>
    <string name="mdp">Mot de passe</string>
    <string name="afficher_mdp">Montrer le mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="synchroniser">Synchroniser</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="logo">Entreprise PlastProd</string>

    <string name="title_activity_client">Clients</string>
    <string name="title_activity_prospect">Prospects</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_bon">Bons</string>
    <string name="title_activity_suivi">Suivi commercial</string>
    <string name="title_activity_perf">Suivi des performances</string>
    <string name="title_activity_affcommande">Commandes</string>
    <string name="title_activity_devis">Devis</string>
    <string name="title_activity_formulaire_client">Client</string>
    <string name="title_activity_statistique">Statistiques</string>
    <string name="title_activity_afficher_message">Message</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_admin">Administration</string>
    <string name="title_activity_histocd">Commandes</string>
    <string name="title_activity_formulaire_contact">Contact</string>
    <string name="title_activity_choix_client">Gestion des bons</string>
    <string name="title_activity_article_dialog">ArticleDialog</string>
    <string name="title_activity_livraison">Suivi des livraisons</string>
    <string name="title_activity_rechecher">RechecherActivity</string>
    <string name="title_activity_satisfaction">Satisfaction client</string>
    <string name="title_activity_commentaire">Commentaires</string>
    <string name="title_activity_menu_questionnaire">Gestion questionnaire</string>
    <string name="title_activity_formulaire_bon">Modif/Ajout</string>

    <string name="action_ajout">Ajouter un contact</string>
    <string name="action_contact">Liste des contacts</string>
    <string name="action_histo">Historique des commandes</string>
    <string name="action_supprime">Supprimer un client</string>
    <string name="action_supprime_contact">Supprimer un contact</string>
    <string name="action_supprime_bon">Supprimer un bon</string>
    <string name="action_ajout_article">Ajouter un article</string>
    <string name="action_valide_devis">Valider le devis</string>


    <string name="form_client_nom">Nom de la société</string>
    <string name="form_contact_nom">Nom</string>
    <string name="form_contact_prenom">Prénom</string>
    <string name="form_contact_poste">Poste</string>
    <string name="form_contact_fixe">Téléphone fixe</string>
    <string name="form_contact_mobile">Téléphone mobile</string>
    <string name="form_contact_fax">Numéro de fax</string>
    <string name="form_contact_email">Adresse E-mail</string>
    <string name="form_client_adresse">Adresse</string>
    <string name="form_contact_adresse">Adresse</string>
    <string name="form_client_complement">Complément adresse</string>
    <string name="form_client_cp">Code postal</string>
    <string name="form_contact_cp">Code postal</string>
    <string name="form_client_ville">Ville</string>
    <string name="form_contact_ville">Ville</string>
    <string name="form_client_pays">Pays</string>
    <string name="form_contact_pays">Pays</string>
    <string name="form_client_commentaire">Commentaires</string>
    <string name="form_contact_commentaire">Commentaires</string>

    <string name="btn_annuler">Annuler</string>
    <string name="btn_enregistre">Enregistrer</string>
    <string name="btn_ok">OK</string>

    <string name="client_recherche_label">PlastProd</string>
    <string name="client_recherche_hint">Rechercher dans les clients</string>


    <string name="action_settings">Paramètres</string>

    <string name="titre_dialog_confirm">Synchronisation</string>
    <string name="titre_dialog_synchro">Synchronisation en cours</string>
    <string name="text_dialog_confirm">Cette opération va synchroniser les données locales de votre smartphone.
        Veuillez vérifier que la connexion Wifi est active.
        Voulez-vous synchroniser vos données ?</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>


    <string name="admin_intro">Paramètres de synchronisation</string>
    <string name="adresse_serveur">Adresse du serveur</string>
    <string name="ssid_wifi">SSID du réseau WIFI</string>


    <string name="recherche">.RechercherActivity</string>

    <string name="titre_dialog_choix_client">Choississez un client</string>


    <string name="btn_devis">Devis</string>
    <string name="btn_commande">Commandes</string>
    <string name="action_ajout_bon">Ajouter</string>
    <string name="article_ajout">Ajouter un produit</string>
    <string name="article_modification">Modification</string>

    <!-- Menu Suivi Client -->
    <string name="btn_stats">Statistiques</string>
    <string name="btn_livraison">Suivi des livraisons</string>
    <string name="btn_calendrier">Calendrier</string>
    <string name="btn_satisfaction">Satisfaction client</string>

    <!-- Statistiques -->
    <string name="libelle">Libellé</string>
    <string name="valeur">Valeur</string>
    <string name="nb_total_commande">Nombre total de commande</string>
    <string name="nb_total_devis">Nombre total de devis</string>
    <string name="nb_commande_termine">Nombre de commande terminée</string>
    <string name="nb_commande_prepare">Nombre de commande préparée</string>

    <!-- Suivi des livraisons -->
    <string name="depart_usine">Départ de l\'usine le</string>
    <string name="mise_disposition_transporteur">Reçu par le transporteur le</string>
    <string name="arrive_prevu">Livraison prévue le</string>
    <string name="lien_suivi">Suivi :</string>

    <!-- Divers -->
    <string name="decors_item_liste_expensive">Décors</string>
    <string name="deux_points">:</string>
    <string name="date_test">12/08/2015 16:12:25</string>
    <string name="date_test_court">19/09/2015</string>
    <string name="numero_bon">CD2154</string>
    <string name="lien_suivi_test">https://track.dhl.fr/2555645485152</string>

    <!-- Satisfaction -->
    <string name="nb_questionnaire_envoye">Questionnaires envoyées</string>
    <string name="nb_reponse_recu">Réponses reçues</string>
    <string name="satisfaction_generale">Satisfaction générale</string>
    <string name="action_stats">Statistiques</string>
    <string name="action_commentaire">Commentaires</string>
    <string name="action_gestion">Configuration</string>

    <!-- Commentaire -->
    <string name="question">Question</string>
    <string name="commentaire">Commentaire</string>
    <string name="title_activity_questionnaire">Paramètres</string>

    <!-- Paramètres -->
    <string name="nom_param">Nom du paramètre</string>
    <string name="valeur_param">Valeur du paramètre</string>
    
    <!-- Dialogue envoi mail de satisfaction -->
    <string name="entete_dilaogue">Entête</string>
    <string name="titre_dialogue">Envoyer le questionnaire à</string>

    <string name="etat_commande">Etat de la commande</string>
    <string name="nom_cmd_societe">Société 1</string>
    <string name="adresse_cmd_societe">12 rue du test</string>
    <string name="ville_cmd">75001 Paris</string>

    <string name="nom_cmd_commercial">Jean Dupond</string>
    <string name="adresse_cmd_commercial">1 rue du bac</string>
    <string name="ville_cmd_commercial">75002 Paris</string>

    <string name="modifie_bon">Modification du bon</string>

    <string name="adresse_mail">Adresse mail du compte</string>
    <string name="extension">Domaine du provider</string>

</resources>
