<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.plastprod.plastprodapp.SuiviActivity">


    <Button
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:text="@string/btn_stats"
        android:id="@+id/button_stats"
        android:onClick="afficherStats"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:gravity="start|center"
        android:textColor="@color/noir"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_insert_chart_black_48dp"
        android:background="@drawable/btn_carre_blanc"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:text="@string/btn_livraison"
        android:id="@+id/button_livraison"
        android:onClick="afficherLivraison"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:gravity="start|center"
        android:textColor="@color/noir"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_schedule_black_48dp"
        android:background="@drawable/btn_carre_blanc"
        android:layout_marginTop="-1sp"
        android:layout_below="@+id/button_stats"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:text="@string/btn_calendrier"
        android:id="@+id/button_calendrier"
        android:onClick="lancerGoogleCalendar"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:gravity="start|center"
        android:textColor="@color/noir"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_today_black_48dp"
        android:background="@drawable/btn_carre_blanc"
        android:layout_marginTop="-1sp"
        android:layout_below="@+id/button_livraison" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:text="@string/btn_satisfaction"
        android:id="@+id/button_satisfaction"
        android:onClick="afficherSatisfaction"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:gravity="start|center"
        android:textColor="@color/noir"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_thumb_up_black_48dp"
        android:background="@drawable/btn_carre_blanc"
        android:layout_marginTop="-1sp"
        android:layout_below="@+id/button_calendrier"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLogo"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        android:layout_marginBottom="40sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
