<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/decors_item_liste_expensive"
                android:background="@drawable/entete_item_orange"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tvQuestion"
                android:gravity="center_vertical|start"
                android:textSize="12sp"
                android:paddingEnd="1sp"
                android:paddingStart="5sp"
                android:text="@string/question"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/decors_item_liste_expensive"
                android:background="@drawable/entete_item_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:id="@+id/tvReponseOuverte"
                android:gravity="center_vertical|start"
                android:paddingStart="5sp"
                android:paddingEnd="10sp"
                android:textSize="12sp"
                android:text="@string/commentaire"/>
        </TableRow>

    </TableLayout>

</LinearLayout>