<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.plastprod.plastprodapp.FormulaireClient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_client_nom"
            android:textColor="@color/noir"
            android:id="@+id/tvNom"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/etNom"
            android:layout_below="@+id/tvNom"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_client_adresse"
            android:textColor="@color/noir"
            android:id="@+id/tvAdresse"
            android:layout_below="@+id/etNom"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/etAdresse"
            android:layout_below="@+id/tvAdresse"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_client_complement"
            android:textColor="@color/noir"
            android:id="@+id/tvComplement"
            android:layout_below="@+id/etAdresse"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/etComplement"
            android:layout_below="@+id/tvComplement"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_client_cp"
            android:textColor="@color/noir"
            android:id="@+id/tvCodePostal"
            android:layout_below="@+id/etComplement"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/etCodePostal"
            android:layout_below="@+id/tvCodePostal"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_client_ville"
            android:textColor="@color/noir"
            android:id="@+id/tvVille"
            android:layout_below="@+id/etCodePostal"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/etVille"
            android:layout_below="@+id/tvVille"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_client_pays"
            android:textColor="@color/noir"
            android:id="@+id/tvPays"
            android:layout_below="@+id/etVille"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/etPays"
            android:layout_below="@+id/tvPays"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_client_commentaire"
            android:textColor="@color/noir"
            android:id="@+id/tvCommentaire"
            android:layout_below="@+id/etPays"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text=""
            android:ems="10"
            android:id="@+id/etCommentaire"
            android:layout_below="@+id/tvCommentaire"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_annuler"
            android:id="@+id/btn_annuler"
            android:layout_below="@+id/etCommentaire"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_carre_blanc"
            android:clickable="true"
            android:textColor="@color/gris_fonce"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:onClick="annulerModification"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_enregistre"
            android:id="@+id/btn_enregistrer"
            android:layout_below="@+id/etCommentaire"
            android:layout_toEndOf="@+id/btn_annuler"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/btn_carre_orange"
            android:clickable="true"
            android:textColor="@color/blanc"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:onClick="enregistrerModification"/>
    </RelativeLayout>

    </ScrollView>

</LinearLayout>
